--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Relationship Status Calculator</title>
+    <title>Ray Martin Index (Relationship score)</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -177,103 +177,74 @@
     <div id="result"></div>
 
     <script>
-      function calculateScore() {
-        // Get values from form
-        const ageGroup = document.getElementById("age").value;
-        const timeTogether = parseFloat(document.getElementById("time").value);
-        const textsPerDay = parseFloat(document.getElementById("texts").value);
-        const sexFrequency = parseFloat(document.getElementById("sex").value);
-        const mealsTogether = parseFloat(
-          document.getElementById("meals").value
-        );
-        const metFamily = parseFloat(document.getElementById("family").value);
-        const socialMedia = parseFloat(document.getElementById("social").value);
-        const futurePlans = parseFloat(document.getElementById("future").value);
-        const emotionalIntimacy = parseFloat(
-          document.getElementById("emotional").value
-        );
-        const conflictResolution = parseFloat(
-          document.getElementById("conflict").value
-        );
-        const isExclusive = parseFloat(
-          document.getElementById("exclusive").value
-        );
+    function calculateScore() {
+      // Get all input elements
+      const ageGroup = document.getElementById('age');
+      const timeTogether = document.getElementById('time');
+      const textsPerDay = document.getElementById('texts');
+      const sexFrequency = document.getElementById('sex');
+      const mealsTogether = document.getElementById('meals');
+      const metFamily = document.getElementById('family');
+      const socialMedia = document.getElementById('social');
+      const futurePlans = document.getElementById('future');
+      const emotionalIntimacy = document.getElementById('emotional');
+      const conflictResolution = document.getElementById('conflict');
+      const isExclusive = document.getElementById('exclusive');
 
-        // Validate all fields
-        if (
-          [
-            ageGroup,
-            timeTogether,
-            textsPerDay,
-            sexFrequency,
-            mealsTogether,
-            metFamily,
-            socialMedia,
-            futurePlans,
-            emotionalIntimacy,
-            conflictResolution,
-            isExclusive,
-          ].some(isNaN)
-        ) {
-          alert("Please fill out all fields!");
-          return;
-        }
-
-        // Calculate factor scores (adjust weights as needed)
-        const timeScore = 0.2 * normalize(timeTogether, 0, 40);
-        const textsScore = 0.1 * bellCurve(textsPerDay, 20, 10); // Peak at 20 texts
-        const sexScore = 0.15 * normalize(sexFrequency, 0, 4); // 0-4x/week
-        const mealsScore = 0.1 * normalize(mealsTogether, 0, 14);
-        const socialScore = 0.15 * (metFamily + socialMedia);
-        const futureScore = 0.2 * futurePlans;
-        const emoScore = 0.25 * emotionalIntimacy;
-        const conflictPenalty =
-          conflictResolution < 5 ? -0.1 * (5 - conflictResolution) : 0;
-
-        // Total score (0-10 scale)
-        let totalScore =
-          (timeScore +
-            textsScore +
-            sexScore +
-            mealsScore +
-            socialScore +
-            futureScore +
-            emoScore +
-            conflictPenalty) *
-          isExclusive;
-        totalScore = Math.min(10, Math.max(0, totalScore)); // Clamp to 0-10
-
-        // Display result
-        const resultDiv = document.getElementById("result");
-        resultDiv.style.display = "block";
-        resultDiv.innerHTML = `<strong>Relationship Score: ${totalScore.toFixed(
-          1
-        )}/10</strong><br>`;
-
-        // Classify
-        if (totalScore >= 7) {
-          resultDiv.innerHTML +=
-            "Status: <strong>Serious (Hooked/Girlfriend)</strong>";
-          resultDiv.className = "serious";
-        } else if (totalScore >= 4) {
-          resultDiv.innerHTML += "Status: <strong>Dating</strong>";
-          resultDiv.className = "dating";
-        } else {
-          resultDiv.innerHTML += "Status: <strong>Casual</strong>";
-          resultDiv.className = "casual";
-        }
+      // Validate all fields
+      if (!ageGroup.value || !timeTogether.value || !textsPerDay.value || 
+          !sexFrequency.value || !mealsTogether.value || !metFamily.value || 
+          !socialMedia.value || !futurePlans.value || !emotionalIntimacy.value || 
+          !conflictResolution.value || !isExclusive.value) {
+        alert("Please fill out all fields!");
+        return;
       }
 
-      // Helper functions
-      function normalize(value, min, max) {
-        return ((value - min) / (max - min)) * 10;
-      }
+      // Convert values to numbers
+      const timeScore = 0.2 * normalize(parseFloat(timeTogether.value), 0, 40);
+      const textsScore = 0.1 * bellCurve(parseFloat(textsPerDay.value), 20, 10);
+      const sexScore = 0.15 * normalize(parseFloat(sexFrequency.value), 0, 4);
+      const mealsScore = 0.1 * normalize(parseFloat(mealsTogether.value), 0, 14);
+      const socialScore = 0.15 * (parseFloat(metFamily.value) + parseFloat(socialMedia.value));
+      const futureScore = 0.2 * parseFloat(futurePlans.value);
+      const emoScore = 0.25 * parseFloat(emotionalIntimacy.value);
+      const conflictPenalty = (parseFloat(conflictResolution.value) < 5) ? 
+                             -0.1 * (5 - parseFloat(conflictResolution.value)) : 0;
+      const exclusivityMultiplier = parseFloat(isExclusive.value);
 
-      function bellCurve(value, mean, stdDev) {
-        return (
-          Math.exp(-Math.pow(value - mean, 2) / (2 * Math.pow(stdDev, 2))) * 10
-        );
+      // Calculate total score
+      let totalScore = (timeScore + textsScore + sexScore + mealsScore + 
+                       socialScore + futureScore + emoScore + conflictPenalty) * 
+                       exclusivityMultiplier;
+      totalScore = Math.min(10, Math.max(0, totalScore)); // Clamp to 0-10
+
+      // Display result
+      const resultDiv = document.getElementById('result');
+      resultDiv.style.display = 'block';
+      resultDiv.innerHTML = `<strong>Relationship Score: ${totalScore.toFixed(1)}/10</strong><br>`;
+
+      // Classify result
+      if (totalScore >= 7) {
+        resultDiv.innerHTML += "Status: <strong>Serious (Hooked/Girlfriend)</strong>";
+        resultDiv.className = 'serious';
+      } else if (totalScore >= 4) {
+        resultDiv.innerHTML += "Status: <strong>Dating</strong>";
+        resultDiv.className = 'dating';
+      } else {
+        resultDiv.innerHTML += "Status: <strong>Casual</strong>";
+        resultDiv.className = 'casual';
       }
-    </script>
+    }
+
+    // Helper functions (keep these the same)
+    function normalize(value, min, max) {
+      return ((value - min) / (max - min)) * 10;
+    }
+
+    function bellCurve(value, mean, stdDev) {
+      return Math.exp(-Math.pow(value - mean, 2) / (2 * Math.pow(stdDev, 2))) * 10;
+    }
+</script>
   </body>
 </html>
+
