--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </style>
   </head>
   <body>
-    <h1>Relationship Status Calculator</h1>
+    <h1>Relationship Status Calculator (Ray Martin Index)</h1>
     <form id="survey">
       <div class="question">
         <label for="age">Age Group:</label>
@@ -287,3 +287,4 @@
     </script>
   </body>
 </html>
+
